# xclogger

./: .gitignore  CMakeLists.txt  README.md  xcloggerConfig.cmake.in
src/: CMakeLists.txt  asyncipclogsubmitstream.hpp  asyncostreamlogsubmitstream.hpp  asynczmqlogsubmitstream.hpp  ipclogsubmitstream.hpp  ipclogsubmitstreamserver.hpp  logger.hpp  message.hpp
tests/: CMakeLists.txt  ipc.cc  ipclog.cc  log.cc  oslog.cc  zmq.cc  zmqlog.cc
xclogger/: CMakeLists.txt  asynczmqlogsubmitstream.hpp  logger.hpp  zmqlogsubmitstream.hpp
